fix: picture now dont get squash to smaller size

--- a/src/components/ArtistCard/style.module.css
+++ b/src/components/ArtistCard/style.module.css
@@ -17,11 +17,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 40%;
+  aspect-ratio: 1/1;
 }
 
 .image {
-  width: 10.025rem;
-  height: 10.025rem;
+  width: 100%;
+  
 }
 
 .firstRow {
